--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
   <title>Admin</title>
+  <script>
+    const END_POINT_URL = ""; // https://api.tgviengxay.bet
+  </script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
