--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
   <title>Admin</title>
   <script>
-    const END_POINT_URL = "https://api.tgviengxay.bet";
+    const END_POINT_URL = "tgvx-alb-1149946344.ap-southeast-1.elb.amazonaws.com/";
   </script>
 </head>
 <body>
